syntax = "proto3";
package protobuffs;
option go_package = "./;protobuffs";

//go:generate protoc -I ./models/protobuffs --go_out=./models/protobuffs --go-grpc_out=require_unimplemented_servers=false:./models/protobuffs ./models/protobuffs/booking_request.proto
service Booker {
    rpc BookDvd (BookingRequest) returns (BookingResponse) {}
}

message BookingRequest {
    uint64 userId = 1;
    uint64 dvdId = 2;
}

message BookingResponse {
    bool success = 1;
    uint64 bookingId = 2;
    string errorMsg = 3;
}